refactor: max change result