@@ -1,5 +1,6 @@
 package ru.yandex.practicum.filmorate.storage.database.films;
 
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.dao.DataIntegrityViolationException;
@@ -15,35 +16,35 @@ import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.model.Genre;
 import ru.yandex.practicum.filmorate.storage.FilmStorage;
 import ru.yandex.practicum.filmorate.storage.UserStorage;
-import ru.yandex.practicum.filmorate.storage.database.SqlQueryConstructor;
-import ru.yandex.practicum.filmorate.storage.database.genres.GenreExtractor;
+import ru.yandex.practicum.filmorate.storage.database.MainSqlQueryConstructor;
 
-import java.util.*;
+import java.util.List;
+import java.util.Map;
+import java.util.HashMap;
+import java.util.Set;
+import java.util.HashSet;
+import java.util.ArrayList;
 import java.util.stream.Collectors;
 
+
+@Slf4j
 @Component("filmDbStorage")
 @Repository
 public class FilmDbStorage implements FilmStorage {
 
-    protected static final String FIND_FILM_BY_ID_IN_TABLE_SQL = "SELECT * FROM FILMS WHERE FILM_ID=?";
-
-    protected static final String GET_FILMS_FROM_TABLE_SQL = "SELECT f.*, l.GENRE_ID, l.GENRE_NAME, m.MPA_NAME "
-            + "FROM FILMS AS f LEFT JOIN GENRES AS g ON f.FILM_ID = g.FILM_ID "
-            + "LEFT JOIN LIST_OF_GENRES AS l ON g.GENRE_ID = l.GENRE_ID "
-            + "LEFT JOIN LIST_OF_MPAS AS m on f.MPA_ID = m.MPA_ID ";
-
     protected static final String FIELDS_PART_OF_SELECT_QUERY =
             "f.FILM_ID, " +
-            "f.FILM_NAME, " +
-            "f.DESCRIPTION," +
-            "f.RELEASE_DATE, " +
-            "f.DURATION, " +
-            "f.MPA_ID, " +
-            "m.MPA_NAME";
+                    "f.FILM_NAME, " +
+                    "f.DESCRIPTION," +
+                    "f.RELEASE_DATE, " +
+                    "f.DURATION, " +
+                    "f.MPA_ID, " +
+                    "m.MPA_NAME";
 
     protected static final String FROM_PART_OF_SELECT_QUERY =
             "FILMS AS f " +
-            "LEFT JOIN LIST_OF_MPAS AS m ON f.MPA_ID = m.MPA_ID ";
+                    "LEFT JOIN LIST_OF_MPAS AS m ON f.MPA_ID = m.MPA_ID " +
+                    "LEFT JOIN LIKES as l ON l.FILM_ID = f.FILM_ID";
 
     protected static final String GROUP_PART_OF_SELECT_QUERY =
             "f.FILM_ID";
@@ -68,7 +69,7 @@ public class FilmDbStorage implements FilmStorage {
 
             jdbcTemplate.update(sqlQuery, idFilm, idGenre);
         } catch (DataIntegrityViolationException e) {
-            return;
+            log.error(e.getMessage());
         }
     }
 
@@ -84,7 +85,7 @@ public class FilmDbStorage implements FilmStorage {
 
             jdbcTemplate.update(sqlQuery, idDirector, idFilm);
         } catch (DataIntegrityViolationException e) {
-            return;
+            log.error(e.getMessage());
         }
     }
 
@@ -92,12 +93,6 @@ public class FilmDbStorage implements FilmStorage {
         String sqlQuery = "DELETE FROM DIRECTORS WHERE FILM_ID=?";
 
         jdbcTemplate.update(sqlQuery, idFilm);
-    }
-
-    private List<Genre> getListGenresForFilm(long idFilm) {
-        List<Genre> genres = jdbcTemplate.query("SELECT GENRE_ID FROM GENRES WHERE FILM_ID=" + idFilm, new GenreExtractor());
-
-        return genres;
     }
 
     @Override
@@ -133,14 +128,14 @@ public class FilmDbStorage implements FilmStorage {
 
     @Override
     public Film updateFilm(long filmId, Film film) {
-        Film filmExist = jdbcTemplate.query(FIND_FILM_BY_ID_IN_TABLE_SQL,
-                new Object[]{filmId}, new FilmMapper()).stream().findAny().orElse(null);
-        if (filmExist == null) {
-            throw new NotFoundException("Фильма c таким id нет");
-        } else {
-            String sqlQuery = "UPDATE FILMS SET FILM_NAME=?, DESCRIPTION=?, RELEASE_DATE=?, DURATION=?, MPA_ID=? "
-                    + "WHERE FILM_ID=?";
 
+        findFilmById(film.getId());
+
+
+        String sqlQuery = "UPDATE FILMS SET FILM_NAME=?, DESCRIPTION=?, RELEASE_DATE=?, DURATION=?, MPA_ID=? "
+                + "WHERE FILM_ID=?";
+
+        try {
             jdbcTemplate.update(
                     sqlQuery,
                     film.getName(),
@@ -149,23 +144,25 @@ public class FilmDbStorage implements FilmStorage {
                     film.getDuration(),
                     film.getMpa().getId(),
                     filmId);
+        } catch (RuntimeException e) {
+            log.error(e.getMessage());
+        }
 
-            deleteGenre(film.getId());
+        deleteGenre(film.getId());
 
-            Set<Genre> genres = film.getGenres();
-            if (!genres.equals(new HashSet<>())) {
-                for (Genre genre : genres) {
-                    addGenres(genre.getId(), film.getId());
-                }
+        Set<Genre> genres = film.getGenres();
+        if (!genres.equals(new HashSet<>())) {
+            for (Genre genre : genres) {
+                addGenres(genre.getId(), film.getId());
             }
+        }
 
-            deleteDirectors(film.getId());
+        deleteDirectors(film.getId());
 
-            Set<Director> directors = film.getDirectors();
-            if (!directors.equals(new HashSet<>())) {
-                for (Director director : directors) {
-                    addDirectors(director.getId(), film.getId());
-                }
+        Set<Director> directors = film.getDirectors();
+        if (!directors.equals(new HashSet<>())) {
+            for (Director director : directors) {
+                addDirectors(director.getId(), film.getId());
             }
         }
         return film;
@@ -178,6 +175,11 @@ public class FilmDbStorage implements FilmStorage {
 
     @Override
     public List<Film> getFilms(List<Long> ids) {
+        return getFilms(ids, null);
+    }
+
+    @Override
+    public List<Film> getFilms(List<Long> ids, String orderFields) {
 
         MainSqlQueryConstructor queryConstructor = MainSqlQueryConstructor
                 .builder()
@@ -190,35 +192,38 @@ public class FilmDbStorage implements FilmStorage {
             if (ids.isEmpty()) {
                 return new ArrayList<>();
             } else {
-                queryConstructor.setOrderPart("DECODE(f.FILM_ID,:ids)");
                 queryConstructor.setWherePart("f.FILM_ID IN (:ids)");
             }
+        }
+
+        if ((orderFields != null && (!orderFields.isEmpty()))) {
+            queryConstructor.setOrderPart(orderFields);
         }
 
         String query = queryConstructor.getSelectQuery();
 
         var params = new MapSqlParameterSource();
         if (ids != null) {
-            params.addValue("ids", ids.stream()
-                    .map(String::valueOf)
-                    .collect(Collectors.joining(",")));
+            params.addValue("ids", ids);
         }
 
-        List<Film> result = namedParameterJdbcTemplate.query(query, params, new FilmMapper());
+        List<Film> result = new ArrayList<>();
 
-        if (result == null) {
-            result = new ArrayList<>();
+        try {
+            result = namedParameterJdbcTemplate.query(query, params, new FilmMapper());
+        } catch (RuntimeException e) {
+            log.error(e.getMessage());
         }
 
         if (!result.isEmpty()) {
-            Map<Long, List<Genre>> genres = getGenresForFilmIds(ids);
-            Map<Long, List<Director>> directors = getDirectorsForFilmIds(ids);
-            Map<Long, List<Long>> likes = getLikesForFilmIds(ids);
+            Map<Long, List<Genre>> genres = getGenresForFilms(result);
+            Map<Long, List<Director>> directors = getDirectorsForFilms(result);
+            Map<Long, List<Long>> likes = getLikesForFilms(result);
 
             for (Film film : result) {
                 film.setGenres(genres.getOrDefault(film.getId(), new ArrayList<>()));
-                film.setDirectors(genres.getOrDefault(film.getId(), new ArrayList<>()));
-                film.setLikes(genres.getOrDefault(film.getId(), new ArrayList<>()));
+                film.setDirectors(directors.getOrDefault(film.getId(), new ArrayList<>()));
+                film.setLikes(likes.getOrDefault(film.getId(), new ArrayList<>()));
             }
         }
 
@@ -227,7 +232,7 @@ public class FilmDbStorage implements FilmStorage {
 
     @Override
     public Film findFilmById(long filmId) {
-        List<Film> films = getFilms(Arrays.asList(filmId));
+        List<Film> films = getFilms(List.of(filmId));
 
         if (films.isEmpty()) {
             throw new NotFoundException("Фильма c таким id нет");
@@ -254,7 +259,7 @@ public class FilmDbStorage implements FilmStorage {
 
         List<Long> ids = namedParameterJdbcTemplate.query(query,
                 params,
-                (rs, numRow)->rs.getLong("FILM_ID"));
+                (rs, numRow) -> rs.getLong("FILM_ID"));
 
         return getFilms(ids);
     }
@@ -275,47 +280,54 @@ public class FilmDbStorage implements FilmStorage {
         jdbcTemplate.update(sql, filmId, userId);
     }
 
-    private Map<Long, List<Genre>> getGenresForFilmIds (List<Long> ids) {
+    private Map<Long, List<Genre>> getGenresForFilms(List<Film> films) {
         MainSqlQueryConstructor queryConstructor = MainSqlQueryConstructor
-            .builder()
-            .fieldsPart("g.FILM_ID, g.GENRE_ID, lg.GENRE_NAME")
-            .fromPart("GENRES as g LEFT JOIN LIST_OF_GENRES as lg " +
-                    "ON g.GENRE_ID = lg.GENRE_ID")
-            .wherePart("g.FILM_ID IN (:ids)")
-            .build();
+                .builder()
+                .fieldsPart("g.FILM_ID, g.GENRE_ID, lg.GENRE_NAME")
+                .fromPart("GENRES as g LEFT JOIN LIST_OF_GENRES as lg " +
+                        "ON g.GENRE_ID = lg.GENRE_ID")
+                .wherePart("g.FILM_ID IN ( :ids )")
+                .build();
 
         String query = queryConstructor.getSelectQuery();
 
         var params = new MapSqlParameterSource();
-        if (ids != null) {
-            params.addValue("ids", ids.stream()
-                    .map(String::valueOf)
-                    .collect(Collectors.joining(",")));
+        if (films != null) {
+            params.addValue("ids", films.stream()
+                    .map(Film::getId)
+                    .collect(Collectors.toList()));
         }
 
-        Map<Long, List<Genre>> result = namedParameterJdbcTemplate.query(query, params, (rs)->{
-            Map<Long,List<Genre>> subResult = new HashMap<>();
-            while (rs.next()) {
-                Genre genre = new Genre();
-                genre.setId(rs.getLong("GENRE_ID"));
-                genre.setName(rs.getString("GENRE_NAME"));
+        log.info(params.toString());
 
-                List<Genre> genresOfFilm = subResult
-                        .getOrDefault(rs.getLong("FILM_ID"),new ArrayList<>());
-                genresOfFilm.add(genre);
-                subResult.put(rs.getLong("FILM_ID"),genresOfFilm);
-            }
-            return subResult;
-        });
+        Map<Long, List<Genre>> result = new HashMap<>();
+        try {
+            result = namedParameterJdbcTemplate.query(query, params, (rs) -> {
+                Map<Long, List<Genre>> subResult = new HashMap<>();
+                while (rs.next()) {
+                    Genre genre = new Genre();
+                    genre.setId(rs.getLong("GENRE_ID"));
+                    genre.setName(rs.getString("GENRE_NAME"));
 
-        if (result==null) {
+                    List<Genre> genresOfFilm = subResult
+                            .getOrDefault(rs.getLong("FILM_ID"), new ArrayList<>());
+                    genresOfFilm.add(genre);
+                    subResult.put(rs.getLong("FILM_ID"), genresOfFilm);
+                }
+                return subResult;
+            });
+        } catch (RuntimeException e) {
+            log.error(e.getMessage());
+        }
+
+        if (result == null) {
             return new HashMap<>();
         }
 
         return result;
     }
 
-    private Map<Long, List<Director>> getDirectorsForFilmIds (List<Long> ids) {
+    private Map<Long, List<Director>> getDirectorsForFilms(List<Film> films) {
         MainSqlQueryConstructor queryConstructor = MainSqlQueryConstructor
                 .builder()
                 .fieldsPart("d.FILM_ID, ld.DIRECTOR_ID, ld.DIRECTOR_NAME")
@@ -327,36 +339,37 @@ public class FilmDbStorage implements FilmStorage {
         String query = queryConstructor.getSelectQuery();
 
         var params = new MapSqlParameterSource();
-        if (ids != null) {
-            params.addValue("ids", ids.stream()
-                    .map(String::valueOf)
-                    .collect(Collectors.joining(",")));
+        if (films != null) {
+            params.addValue("ids", films.stream()
+                    .map(Film::getId)
+                    .collect(Collectors.toList()));
         }
 
-        Map<Long, List<Director>> result = namedParameterJdbcTemplate.query(query, params, (rs)->{
-            Map<Long,List<Director>> subResult = new HashMap<>();
-            while (rs.next()) {
-                Director director = new Director();
-                director.setId(rs.getLong("DIRECTOR_ID"));
-                director.setName(rs.getString("DIRECTOR_NAME"));
+        Map<Long, List<Director>> result = new HashMap<>();
+        try {
+            namedParameterJdbcTemplate.query(query, params, (rs) -> {
+                Map<Long, List<Director>> subResult = new HashMap<>();
+                while (rs.next()) {
+                    Director director = new Director();
+                    director.setId(rs.getLong("DIRECTOR_ID"));
+                    director.setName(rs.getString("DIRECTOR_NAME"));
 
-                List<Director> directorsOfFilm = subResult
-                        .getOrDefault(rs.getLong("FILM_ID"),new ArrayList<>());
-                directorsOfFilm.add(director);
+                    List<Director> directorsOfFilm = subResult
+                            .getOrDefault(rs.getLong("FILM_ID"), new ArrayList<>());
+                    directorsOfFilm.add(director);
 
-                subResult.put(rs.getLong("FILM_ID"),directorsOfFilm);
-            }
-            return subResult;
-        });
-
-        if (result==null) {
-            return new HashMap<>();
+                    subResult.put(rs.getLong("FILM_ID"), directorsOfFilm);
+                }
+                return subResult;
+            });
+        } catch (RuntimeException e) {
+            log.error(e.getMessage());
         }
 
         return result;
     }
 
-    private Map<Long, List<Long>> getLikesForFilmIds (List<Long> ids) {
+    private Map<Long, List<Long>> getLikesForFilms(List<Film> films) {
         MainSqlQueryConstructor queryConstructor = MainSqlQueryConstructor
                 .builder()
                 .fieldsPart("FILM_ID, USER_ID")
@@ -367,27 +380,28 @@ public class FilmDbStorage implements FilmStorage {
         String query = queryConstructor.getSelectQuery();
 
         var params = new MapSqlParameterSource();
-        if (ids != null) {
-            params.addValue("ids", ids.stream()
-                    .map(String::valueOf)
-                    .collect(Collectors.joining(",")));
+        if (films != null) {
+            params.addValue("ids", films.stream()
+                    .map(Film::getId)
+                    .collect(Collectors.toList()));
         }
 
-        Map<Long, List<Long>> result = namedParameterJdbcTemplate.query(query, params, (rs)->{
-            Map<Long,List<Long>> subResult = new HashMap<>();
-            while (rs.next()) {
-                List<Long> likesOfFilm =
-                        subResult.getOrDefault(rs.getLong("FILM_ID"),new ArrayList<>());
+        Map<Long, List<Long>> result = new HashMap<>();
+        try {
+            namedParameterJdbcTemplate.query(query, params, (rs) -> {
+                Map<Long, List<Long>> subResult = new HashMap<>();
+                while (rs.next()) {
+                    List<Long> likesOfFilm =
+                            subResult.getOrDefault(rs.getLong("FILM_ID"), new ArrayList<>());
 
-                likesOfFilm.add(rs.getLong("USER_ID"));
+                    likesOfFilm.add(rs.getLong("USER_ID"));
 
-                subResult.put(rs.getLong("FILM_ID"),likesOfFilm);
-            }
-            return subResult;
-        });
-
-        if (result==null) {
-            return new HashMap<>();
+                    subResult.put(rs.getLong("FILM_ID"), likesOfFilm);
+                }
+                return subResult;
+            });
+        } catch (RuntimeException e) {
+            log.error(e.getMessage());
         }
 
         return result;
